baml_language/crates/baml_tests/snapshots/formatter/baml_tests__formatter__01_lexer__extra_semicolons.snap
---
source: target/debug/build/baml_tests-17af2d4231950a65/out/generated_tests.rs
expression: output
---
Function "function"
Word "Foo"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "x"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Word "x"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Word "x"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Word "x"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Word "x"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Word "x"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Word "x"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Word "x"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Word "x"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Word "x"
Plus "+"
IntegerLiteral "1"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
Semicolon ";"
RBrace "}"
