baml_language/crates/baml_tests/snapshots/formatter/baml_tests__formatter__01_lexer__mid_expression_whitespace.snap
---
source: target/debug/build/baml_tests-17af2d4231950a65/out/generated_tests.rs
expression: output
---
Function "function"
Word "foo"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Equals "="
IntegerLiteral "1"
Semicolon ";"
Let "let"
Word "y"
Equals "="
IntegerLiteral "2"
Semicolon ";"
Let "let"
Word "w"
Equals "="
Word "x"
Plus "+"
Word "y"
Plus "+"
Word "y"
Plus "+"
Word "z"
Semicolon ";"
Let "let"
Word "z"
Equals "="
Word "x"
Plus "+"
Word "y"
Semicolon ";"
Return "return"
Word "z"
Semicolon ";"
RBrace "}"
