baml_language/crates/baml_tests/snapshots/formatter/baml_tests__formatter__01_lexer__old_param_syntax.snap
---
source: target/debug/build/baml_tests-17af2d4231950a65/out/generated_tests.rs
expression: output
---
Function "function"
Word "Foo"
LParen "("
Word "x"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "x"
Plus "+"
IntegerLiteral "1"
RBrace "}"
Function "function"
Word "Bar"
LParen "("
Word "x"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "x"
Plus "+"
IntegerLiteral "1"
RBrace "}"
Function "function"
Word "Baz"
LParen "("
Word "x"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "x"
Plus "+"
IntegerLiteral "1"
RBrace "}"
Function "function"
Word "Qux"
LParen "("
Word "x"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "x"
Plus "+"
IntegerLiteral "1"
RBrace "}"
