baml_language/crates/baml_tests/snapshots/formatter/baml_tests__formatter__01_lexer__weird_comments.snap
---
source: target/debug/build/baml_tests-17af2d4231950a65/out/generated_tests.rs
expression: output
---
Function "function"
Word "Bar"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Equals "="
IntegerLiteral "2"
Semicolon ";"
Slash "/"
Slash "/"
Word "comment"
Return "return"
Word "x"
Semicolon ";"
RBrace "}"
Function "function"
Word "HelloWorld"
Slash "/"
Star "*"
Test "test"
Star "*"
Slash "/"
LParen "("
Word "name"
Colon ":"
Slash "/"
Star "*"
Test "test"
Star "*"
Slash "/"
Word "string"
Slash "/"
Star "*"
Test "test"
Star "*"
Slash "/"
RParen ")"
Slash "/"
Star "*"
Test "test"
Star "*"
Slash "/"
Arrow "->"
Word "string"
Slash "/"
Star "*"
Test "test"
Star "*"
Slash "/"
LBrace "{"
Slash "/"
Star "*"
Test "test"
Star "*"
Slash "/"
Client "client"
Slash "/"
Star "*"
Test "test"
Star "*"
Slash "/"
Word "GPT4"
Slash "/"
Star "*"
Test "test"
Star "*"
Slash "/"
Word "prompt"
Hash "#"
Quote "\""
Word "Say"
Word "hello"
Word "to"
LBrace "{"
LBrace "{"
Word "name"
RBrace "}"
RBrace "}"
Quote "\""
Hash "#"
RBrace "}"
Class "class"
Word "User"
Slash "/"
Star "*"
Test "test"
Star "*"
Slash "/"
LBrace "{"
Slash "/"
Slash "/"
Test "test"
Word "name"
Slash "/"
Star "*"
Test "test"
Star "*"
Slash "/"
Word "string"
At "@"
Word "assert"
LParen "("
LBrace "{"
LBrace "{"
Word "this"
Greater ">"
IntegerLiteral "0"
RBrace "}"
RBrace "}"
RParen ")"
Slash "/"
Slash "/"
Test "test"
Word "age"
Word "int"
At "@"
Word "skip"
Word "val"
LParen "("
Word "int"
Slash "/"
Star "*"
Test "test"
Star "*"
Slash "/"
Pipe "|"
Slash "/"
Star "*"
Test "test"
Star "*"
Slash "/"
Word "string"
Slash "/"
Star "*"
Test "test"
Star "*"
Slash "/"
RParen ")"
RBrace "}"
Slash "/"
Slash "/"
Word "Added"
Word "comment"
Slash "/"
Slash "/"
Word "Test"
Word "comment"
