baml_language/crates/baml_tests/snapshots/formatter/baml_tests__formatter__01_lexer__weird_whitespace.snap
---
source: target/debug/build/baml_tests-17af2d4231950a65/out/generated_tests.rs
expression: output
---
Class "class"
Word "Foo"
LBrace "{"
Word "field"
Word "string"
At "@"
Word "skip"
Word "field2"
Word "string"
At "@"
Word "skip"
Word "field3"
Word "string"
At "@"
Word "skip"
Word "field4"
Word "string"
At "@"
Word "skip"
Word "field5"
Word "string"
At "@"
Word "skip"
Word "field6"
Word "string"
At "@"
Word "skip"
Word "field7"
Word "string"
At "@"
Word "skip"
Word "field8"
Word "string"
At "@"
Word "skip"
Word "field9"
Word "string"
At "@"
Word "skip"
Word "field10"
Word "string"
At "@"
Word "skip"
RBrace "}"
Enum "enum"
Word "Bar"
LBrace "{"
Word "Value1"
Word "Value2"
RBrace "}"
Client "client"
Less "<"
Word "llm"
Greater ">"
Word "GPT4"
LBrace "{"
Word "provider"
Word "openai"
Word "model"
Word "gpt-4"
Word "options"
LBrace "{"
Word "temperature"
FloatLiteral "0.7"
RBrace "}"
RBrace "}"
TemplateString "template_string"
Word "MyPrompt"
LParen "("
RParen ")"
Hash "#"
Quote "\""
Word "You"
Word "are"
Word "helpful"
Quote "\""
Hash "#"
Test "test"
Word "TestUser"
LBrace "{"
Word "functions"
LBracket "["
Word "GetUser"
RBracket "]"
Word "args"
LBrace "{"
Word "user_id"
Quote "\""
IntegerLiteral "123"
Quote "\""
RBrace "}"
RBrace "}"
Word "type"
Word "UserId"
Equals "="
Word "string"
RetryPolicy "retry_policy"
Word "DefaultRetry"
LBrace "{"
Word "max_retries"
IntegerLiteral "3"
Word "delay_ms"
IntegerLiteral "1000"
RBrace "}"
Function "function"
Word "HelloWorld"
LParen "("
Word "name"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "string"
LBrace "{"
Client "client"
Word "GPT4"
Word "prompt"
Hash "#"
Quote "\""
Word "Say"
Word "hello"
Word "to"
LBrace "{"
LBrace "{"
Word "name"
RBrace "}"
RBrace "}"
Quote "\""
Hash "#"
RBrace "}"
